--- a/index.html
+++ b/index.html
@@ -57,14 +57,32 @@
           <!--<li><a href="hospital.html">Hospitals</a></li>-->
           <!--<li><a href="speciality.html">Specialities</a></li>-->
           <li><a href="schedule.html">Schedule</a></li>
-          <li><a href="/prp-site/2025/index.html">Unofficial Hub</a></li>
+          <li><a href="/prp-site/2025/index.html">Gazette</a></li>
           <li><a href="prev.html">Previous Merit Lists</a></li>
         </ul>
       </div>
     </nav>
-    <div class="navbar notif" id="notif">
-      This is estimated merit list based on official Gazette of 2025 July<br>Correctly placed candidates from unofficial merit list, similarity of current merit list to unofficial merit list is show below
-    </div>
+   <div class="navbar notif" id="notif" style="
+  background: #23272a;
+  color: #e0e0e0;
+  border-left: 5px solid #5cdb71;
+  border-radius: 9px;
+  padding: 1em 1.5em;
+  margin-bottom: 1.2em;
+  font-size: 1.09em;
+  box-shadow: 0 2px 12px 0 rgba(92,219,113,0.08);
+">
+  <strong style="color:#5cdb71;">Merit List Updated!</strong><br>
+  The merit list has been updated according to the <span style="color:#ffe066; font-weight:600;">most recent official gazette</span>.<br>
+  <span style="color:#b5ffcb;">
+    <b>Now includes <span style="color:#5cdb71;">2,206</span> eligible candidates</b>
+    (previously <span style="color:#ffe066;">2,191</span>).
+  </span>
+  <br>
+  <span style="color:#aaa;">
+    Statistics below show how closely the estimated merit list matches the previously published unofficial merit, including the number of correctly placed candidates in both lists.
+  </span>
+</div>
 
     <div class="main_container" style="width: 80%">
       <div class="flex stat-container">
