--- a/candidate.html
+++ b/candidate.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PRP Statistics</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/sync-fetch"></script>
+    <script id='data' src="data.js"></script>
+    <script src="schedule.js"></script>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <link
+    href="https://cdn.datatables.net/v/dt/jq-3.7.0/dt-2.0.8/r-3.0.2/sl-2.0.3/datatables.min.css"
+    rel="stylesheet"
+  />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/v/dt/dt-2.0.8/b-3.0.2/b-html5-3.0.2/datatables.min.js"></script>
     <link rel="stylesheet" href="index.css" />
-    <!-- ...other scripts and DataTables CSS... -->
   </head>
   <body>
     <!-- Modern Navigation Bar -->
@@ -37,7 +49,7 @@
           <span class="meta-item">Applicant ID: <strong id="applicantId">15610</strong></span>
           <span class="meta-item">PMDC Number: <strong id="pmdcNo">15610</strong></span>
         </div>
-        <div class="stat-card">
+        <div class="stat-card aggMarks">
           <div class="stat-number" id="provMarks">29</div>
           <div class="stat-label">Provisional Marks</div>
           <div class="bubble-row">
