--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   font-size: 1.08em;
 ">
   <strong>About this Merit List</strong><br>
-  This merit list is compiled from the <span style="color:#5cdb71;font-weight:600;">official gazette</span>. The statistics above show how closely the official merit list matches the previously published unofficial merit, including the number of candidates <span style="color:#5cdb71;font-weight:600;">correctly placed</span> in both lists.<br>
+  This merit list is compiled from the <span style="color:#5cdb71;font-weight:600;">official gazette</span>. The statistics above show how closely the estimated merit list based on official gazette matches the previously published unofficial merit, including the number of candidates <span style="color:#5cdb71;font-weight:600;">correctly placed</span> in both lists.<br>
   <span style="color:#b5ffcb;">This provides transparency and helps you assess the accuracy of the unofficial data.</span>
   <br><br>
   <span style="color:#aaa;">You can now click on hospital and speciality name to check individual merit lists.</span>
