--- a/hospital.html
+++ b/hospital.html
@@ -170,7 +170,10 @@
               {   
                     extend: 'pdfHtml5',
                     text: 'Download PDF',
-                    title : default_filter.hospital+","+default_filter.speciality+' Merit List',
+                    title : default_filter.hospital+","+default_filter.speciality+' Estimated Merit List',
+                    filename : function(){
+                      default_filter.hospital+","+default_filter.speciality+' Estimated Merit List'
+                    },
                     customize: function (doc) {
                         
                         let table = doc.content[1].table.body;
