--- a/prev.html
+++ b/prev.html
@@ -58,6 +58,8 @@
   <span id="merit-helper-content">
     Please select which year you want to see merit lists of!
   </span>
+    <br><span style="color:#aaa;">If a merit list doesnot show up or glitches, select options again in this order <strong>Year > Month > Round > Program</strong></span>
+
 </div>
       
       <div class="filters">
