--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
           <li><a href="index.html" class="active">Home</a></li>
           <!--<li><a href="hospital.html">Hospitals</a></li>-->
           <!--<li><a href="speciality.html">Specialities</a></li>-->
+          
+          <li><a href="review.html">Training Reviews</a></li>
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="/prp-site/2025/index.html">Gazette</a></li>
           <li><a href="prev.html">Previous Merit Lists</a></li>
