--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
   <strong style="color:#5cdb71;">Merit List Updated!</strong><br>
   The merit list has been updated according to the <span style="color:#ffe066; font-weight:600;">most recent official gazette</span>.<br>
   <span style="color:#b5ffcb;">
-    <b>Now includes <span style="color:#5cdb71;">2,203</span> eligible candidates</b>
-    (previously <span style="color:#ffe066;">2,191</span> then to <span style="color:#ffe066;">2,206</span>).
+    <b>Now includes <span style="color:#5cdb71;">2,204</span> eligible candidates</b>
+    (previously <span style="color:#ffe066;">2,191</span> then to <span style="color:#ffe066;">2,206</span> then to <span style="color:#ffe066;">2,203</span>).
   </span>
   <br>
   <span style="color:#aaa;">
