--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
         prpdatastat.github.io/prp-site/prev.html
       </a>
     </span>
+    <br>
+     <strong style="color:#00ffaa;">📚 BDS Unofficial Merit List Now Available!</strong><br>
+    <span style="color:#b0ffe0;">      
+      <a href="https://prpdatastat.github.io/prp-site/bdsUnofficial2025.xlsx" target="_blank" style="color:#ffe066; font-weight:bold; text-decoration:underline;">
+        🔗 Download from here 
+      </a>
+    </span>
   </div>
 </div>
 
