--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
   box-shadow: 0 2px 12px 0 rgba(92,219,113,0.08);
 ">
   <strong style="color:#5cdb71;">Merit List Updated!</strong><br>
-  The merit list has been updated according to the <span style="color:#ffe066; font-weight:600;">most recent official gazette</span>.<br>
-  <span style="color:#b5ffcb;">
+  The merit list has been updated according to the <span style="color:#ffe066; font-weight:600;">most recent official gazette  (18/7/2025 6:45pm)</span>.<br>
+  <!--<span style="color:#b5ffcb;">
     <b>Now includes <span style="color:#5cdb71;">2,204</span> eligible candidates</b>
     (previously <span style="color:#ffe066;">2,191</span> then to <span style="color:#ffe066;">2,206</span> then to <span style="color:#ffe066;">2,203</span>).
-  </span>
+  </span>-->
   <br>
   <span style="color:#aaa;">
     Statistics below show how closely the estimated merit list matches the previously published unofficial merit, including the number of correctly placed candidates in both lists.
