updated 1st merit list

--- a/index.html
+++ b/index.html
@@ -86,16 +86,19 @@
   font-size: 1.09em;
   box-shadow: 0 2px 12px 0 rgba(92,219,113,0.08);
 ">
-  <strong style="color:#5cdb71;">Merit List Updated!</strong><br>
-  The merit list has been updated according to the <span style="color:#ffe066; font-weight:600;">most recent official gazette  (18/7/2025 6:45pm)</span>.<br>
-  <!--<span style="color:#b5ffcb;">
-    <b>Now includes <span style="color:#5cdb71;">2,204</span> eligible candidates</b>
-    (previously <span style="color:#ffe066;">2,191</span> then to <span style="color:#ffe066;">2,206</span> then to <span style="color:#ffe066;">2,203</span>).
-  </span>-->
-  <br>
-  <span style="color:#aaa;">
-    Statistics below show how closely the estimated merit list matches the previously published unofficial merit, including the number of correctly placed candidates in both lists.
-  </span>
+  <strong style="color:#5cdb71;">Official Merit List – Round 1 Published!</strong><br>
+The merit list shown below has been released by the <span style="color:#ffe066; font-weight:600;">official government authority</span> as part of the <b>first round</b> of selections.<br>
+<br>
+<span style="color:#5cdb71;"><b>Click "Check Consent"</b></span> next to each applicant to view their current consent status.<br>
+<br>
+<span style="color:#ffd43b; font-weight:600;">
+📊 Statistics below now show how closely the <u>estimated merit list</u> matched the <u>official list</u>, highlighting the accuracy of earlier predictions.
+</span><br>
+<br>
+<span style="color:#aaa;">
+Additional comparison details include the number of correctly placed candidates between both lists.
+</span>
+
 
   <hr style="border-color: rgba(255,255,255,0.1); margin: 1em 0;">
 
@@ -132,19 +135,19 @@
         <div class="stat-card">
   <div id="FCPS" class="stat-number">1,234</div>
   <div class="stat-desc">FCPS</div>
-  <div class="stat-label">Similar to unofficial merit list</div>
+  <div class="stat-label">Similar to estimated merit list</div>
   <div class="stat-correct" id="FCPS-correct"></div>
 </div>
 <div class="stat-card">
   <div id="MS" class="stat-number">1,234</div>
   <div class="stat-desc">MS</div>
-  <div class="stat-label">Similar to unofficial merit list</div>
+  <div class="stat-label">Similar to estimated merit list</div>
   <div class="stat-correct" id="MS-correct"></div>
 </div>
 <div class="stat-card">
   <div id="MD" class="stat-number">1,234</div>
   <div class="stat-desc">MD</div>
-  <div class="stat-label">Similar to unofficial merit list</div>
+  <div class="stat-label">Similar to estimated merit list</div>
   <div class="stat-correct" id="MD-correct"></div>
 </div>
     
