--- a/index.html
+++ b/index.html
@@ -372,8 +372,9 @@ You must provide either a threshold or a filter to generate meaningful results. 
                     text: 'Download PDF',
                     title : 'officialFirstRoundMeritList',
                     filename : function(){
-                     default_filter.program + 'officialFirstRoundMeritList'  },
-               
+                     default_filter.program + 'officialFirstRoundMeritList'
+                    },
+
                     customize: function (doc) {
                         
                         let table = doc.content[1].table.body;
