--- a/index.html
+++ b/index.html
@@ -79,26 +79,29 @@
 <div class="navbar notif" id="notif" style="
   background: #23272a;
   color: #e0e0e0;
-  border-left: 5px solid #5cdb71;
+  border-left: 5px solid #ff4d4f;
   border-radius: 9px;
   padding: 1em 1.5em;
   margin-bottom: 1.2em;
-  font-size: 1.09em;
-  box-shadow: 0 2px 12px 0 rgba(92,219,113,0.08);
+  font-size: 1.05em;
+  box-shadow: 0 2px 12px rgba(255, 77, 79, 0.15);
 ">
-  <strong style="color:#5cdb71;">Official Merit List – Round 1 Published!</strong><br>
-The merit list shown below has been released by the <span style="color:#ffe066; font-weight:600;">official government authority</span> as part of the <b>first round</b> of selections.<br>
-<br>
-<span style="color:#5cdb71;"><b>Click "Check Consent"</b></span> next to each applicant to view their current consent status.<br>
-<br>
-<span style="color:#ffd43b; font-weight:600;">
-📊 Statistics below now show how closely the <u>estimated merit list</u> matched the <u>official list</u>, highlighting the accuracy of earlier predictions.
-</span><br>
-<br>
-<span style="color:#aaa;">
-Additional comparison details include the number of correctly placed candidates between both lists.
-</span>
+  <strong style="color:#ff4d4f; font-size:1.2em;">🚫 Last Estimated Merit List Ever</strong><br>
+  This is the final time an <b>unofficial or estimated merit list</b> was being provided.<br>
+  These will <u>not</u> be made for future induction rounds.<br>
+  <b>Need help or guidance in future?</b> Email us at 
+  <a href="mailto:rekobeep@proton.me" style="color:#ffe066; font-weight:bold;">rekobeep@proton.me</a>
+  <br><br>
 
+  <strong style="color:#5cdb71;">✅ Official Merit List – Round 1 Published!</strong><br>
+  Released by the <span style="color:#ffe066; font-weight:600;">official government authority</span>.<br>
+  <span style="color:#5cdb71;"><b>Click "Check Consent"</b></span> to view applicant consent status.
+
+  <br><br>
+  <span style="color:#ffd43b; font-weight:600;">
+    📊 Estimated vs. Official List Accuracy Shown Below
+  </span><br>
+  <span style="color:#aaa;">Includes correct placements and prediction performance.</span>
 
   <hr style="border-color: rgba(255,255,255,0.1); margin: 1em 0;">
 
@@ -111,22 +114,19 @@ Additional comparison details include the number of correctly placed candidates 
     box-shadow: 0 0 15px rgba(0, 255, 170, 0.25);
     animation: glowPulse 2s infinite;
   ">
-    <strong style="color:#00ffaa;">📚 All Previous Merit Lists Now Available!</strong><br>
-    <span style="color:#b0ffe0;">
-      🔗 View here: 
-      <a href="https://prpdatastat.github.io/prp-site/prev.html" target="_blank" style="color:#ffe066; font-weight:bold; text-decoration:underline;">
-        prpdatastat.github.io/prp-site/prev.html
-      </a>
-    </span>
-    <br>
-     <strong style="color:#00ffaa;">📚 BDS Unofficial Merit List Now Available!</strong><br>
-    <span style="color:#b0ffe0;">      
-      <a href="https://prpdatastat.github.io/prp-site/bdsUnofficial2025.xlsx" target="_blank" style="color:#ffe066; font-weight:bold; text-decoration:underline;">
-        🔗 Download from here 
-      </a>
-    </span>
+    <strong style="color:#00ffaa;">📁 Previous Lists</strong><br>
+    <a href="https://prpdatastat.github.io/prp-site/prev.html" target="_blank" style="color:#ffe066; font-weight:bold; text-decoration:underline;">
+      🔗 prpdatastat.github.io/prp-site/prev.html
+    </a>
+    <br><br>
+    <strong style="color:#00ffaa;">📄 BDS Unofficial Merit List</strong><br>
+    <a href="https://prpdatastat.github.io/prp-site/bdsUnofficial2025.xlsx" target="_blank" style="color:#ffe066; font-weight:bold; text-decoration:underline;">
+      🔗 Download Here
+    </a>
   </div>
 </div>
+
+
 
 
 
