--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
   font-size: 1.05em;
   box-shadow: 0 2px 12px rgba(255, 77, 79, 0.15);
 ">
-  <strong style="color:#ff4d4f; font-size:1.2em;">🚫 Last Estimated Merit List Ever</strong><br>
+  <!--<strong style="color:#ff4d4f; font-size:1.2em;">🚫 Last Estimated Merit List Ever</strong><br>
   This is the final time an <b>unofficial or estimated merit list</b> was being provided.<br>
   These will <u>not</u> be made for future induction rounds.<br>
   <b>Need help or guidance in future?</b> Email us at 
   <a href="mailto:rekobeep@proton.me" style="color:#ffe066; font-weight:bold;">rekobeep@proton.me</a>
-  <br><br>
+  <br><br>-->
 
-  <strong style="color:#5cdb71;">✅ Official Merit List – Round 1 Published!</strong><br>
+  <strong style="color:#5cdb71;">✅ Official Merit List – Round 2 Published!</strong><br>
   Released by the <span style="color:#ffe066; font-weight:600;">official government authority</span>.<br>
   <span style="color:#5cdb71;"><b>Click "Check Consent"</b></span> to view applicant consent status.
 
