--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
           <img class="logo" onclick="gotoUrl()" src="logo.png" />
         </div>
         <ul class="nav-links">
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <!--<li><a href="hospital.html">Hospitals</a></li>-->
           <!--<li><a href="speciality.html">Specialities</a></li>-->
           
           <li><a href="review.html">Training Reviews</a></li>
+          <li><a href="cutoff.html">Cutoff Merits</a></li>
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="/prp-site/2025/index.html">Gazette</a></li>
           <li><a href="prev.html">Previous Merit Lists</a></li>
@@ -86,17 +87,15 @@
   font-size: 1.05em;
   box-shadow: 0 2px 12px rgba(255, 77, 79, 0.15);
 ">
-  <!--<strong style="color:#ff4d4f; font-size:1.2em;">🚫 Last Estimated Merit List Ever</strong><br>
-  This is the final time an <b>unofficial or estimated merit list</b> was being provided.<br>
-  These will <u>not</u> be made for future induction rounds.<br>
-  <b>Need help or guidance in future?</b> Email us at 
-  <a href="mailto:rekobeep@proton.me" style="color:#ffe066; font-weight:bold;">rekobeep@proton.me</a>
-  <br><br>-->
 
-<strong style="color:#5cdb71;">✅ Official Merit List – Round 2 Published!</strong><br>
-Released by the <span style="color:#ffe066; font-weight:600;">official government authority</span>.<br>
-<span style="color:#5cdb71;"><b>Click "Check Consent"</b></span> to view the current applicant's consent status.<br>
-✨ <span style="color:#7fffa7;"><b>New:</b> "Show Next Candidate"</span> reveals who will be considered next <i>if the current candidate does not give consent</i>. Use it to preview upcoming applicants in line!
+  <div style="margin-bottom: 1em; background: #1e1f22; border-left: 4px solid #5cdb71; padding: 0.6em 1em; border-radius: 6px;">
+    <strong style="color:#5cdb71;">📊 New:</strong> View official <b>Cutoff Merits</b> for each specialty using the <b>Cutoff Dashboard</b> below.
+  </div>
+
+  <strong style="color:#5cdb71;">✅ Official Merit List – Round 2 Published!</strong><br>
+  Released by the <span style="color:#ffe066; font-weight:600;">official government authority</span>.<br>
+  <span style="color:#5cdb71;"><b>Click "Check Consent"</b></span> to view the current applicant's consent status.<br>
+  ✨ <span style="color:#7fffa7;"><b>New:</b> "Show Next Candidate"</span> reveals who will be considered next <i>if the current candidate does not give consent</i>. Use it to preview upcoming applicants in line!
 
   <br><br>
   <span style="color:#ffd43b; font-weight:600;">
